# refactory_project

./: README.md  pyproject.toml
legacy/: order_report_legacy.py  output.json
legacy/expected/: report.txt
src/: main.py  order_report_legacy.py
src/models/: customer.py  product.py  promotion.py  shippingZone.py  transaction.py
src/services/: Report_writer.py  calculations.py  loaders.py  report.py
tests/: test_golden_master.py  test_report_writer.py
